# shamil-gear-academy

./: .gitignore  README.md
escrow/: Cargo.toml
escrow/src/: lib.rs
tamagotchi/: Cargo.toml  build.rs
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: lib.rs
tamagotchi/src/: lib.rs
